1. Collection API Улучшения[70623#275105] #2